Fix wrong import statement of List
Signed-off-by: qwebnm7788 <qwebnm7788@naver.com>