@@ -1,6 +1,6 @@
 package com.basicbug.bikini.model;
 
-import com.sun.tools.javac.util.List;
+import java.util.Arrays;
 import java.util.Collection;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -18,7 +18,7 @@ public class UserPrincipal implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(user.getUserRole()));
+        return Arrays.asList(new SimpleGrantedAuthority(user.getUserRole()));
     }
 
     @Override
